--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,3 +1,14 @@
 // 全局样式文件
 // 导入全局的样式文件
 @import './icon.less';
+
+body{
+    background-color: #f5f7f9;
+}
+
+.page_nav_bar{
+    background-color: #3296fa !important;
+    .van-nav-bar__title{
+        color: #fff;
+    }
+}
