频道编辑完成

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -78,3 +78,13 @@
 .toutiao-fenxiang:before {
   content: "\e607";
 }
+body {
+  background-color: #f5f7f9;
+}
+.page_nav_bar {
+  background-color: #3296fa !important;
+}
+.page_nav_bar .van-nav-bar__title,
+.page_nav_bar .van-icon::before {
+  color: #fff;
+}
