--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -8,11 +8,9 @@ body{
 
 .page_nav_bar{
     background-color: #3296fa !important;
-<<<<<<< HEAD
     .van-nav-bar__title, .van-icon::before{
-=======
     .van-nav-bar__title{
->>>>>>> eaa26ac34f3c236a66086ab8ffd8e6379009acce
         color: #fff;
     }
+}
 }
